; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/openssh/extr_log.c_log_change_level.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/openssh/extr_log.c_log_change_level.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@argv0 = common dso_local global i32* null, align 8
@log_level = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @log_change_level(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32*, i32** @argv0, align 8
  %5 = icmp eq i32* %4, null
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %12

7:                                                ; preds = %1
  %8 = load i32, i32* %3, align 4
  switch i32 %8, label %11 [
    i32 129, label %9
    i32 131, label %9
    i32 132, label %9
    i32 130, label %9
    i32 128, label %9
    i32 135, label %9
    i32 134, label %9
    i32 133, label %9
  ]

9:                                                ; preds = %7, %7, %7, %7, %7, %7, %7, %7
  %10 = load i32, i32* %3, align 4
  store i32 %10, i32* @log_level, align 4
  store i32 0, i32* %2, align 4
  br label %12

11:                                               ; preds = %7
  store i32 -1, i32* %2, align 4
  br label %12

12:                                               ; preds = %11, %9, %6
  %13 = load i32, i32* %2, align 4
  ret i32 %13
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
